[gd_scene load_steps=9 format=3 uid="uid://c74gt60xgsb7d"]

[ext_resource type="Texture2D" uid="uid://10db0c7h5udr" path="res://Img/UI/TextZone.png" id="1_qbsum"]
[ext_resource type="Script" uid="uid://bp854yq6aqqc0" path="res://Scripts/UI/dialogue_panel.gd" id="1_qi7xk"]
[ext_resource type="FontFile" uid="uid://gkas3n827804" path="res://fonts/PressStart2P-Regular.ttf" id="2_xi5iw"]
[ext_resource type="PackedScene" uid="uid://bcivjodw5wd0w" path="res://Scenes/UI/input_indicator.tscn" id="3_xi5iw"]
[ext_resource type="AudioStream" uid="uid://diwuid8emjli4" path="res://Sounds/LetterBip.wav" id="5_1h2o0"]
[ext_resource type="Script" uid="uid://deyummoc7de3d" path="res://Scripts/bip_sound_player.gd" id="6_o4i36"]

[sub_resource type="LabelSettings" id="LabelSettings_qbsum"]
font = ExtResource("2_xi5iw")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qi7xk"]
line_spacing = 10.0
font = ExtResource("2_xi5iw")
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="DialoguePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qi7xk")

[node name="DialogueZone" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_qbsum")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.020000001
anchor_top = 0.13000001
anchor_right = 1.0
anchor_bottom = 0.873
offset_left = -0.040000916
offset_top = 0.024997711
offset_right = -21.0
offset_bottom = 0.0025024414
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="SpeakerName" type="Label" parent="DialogueZone/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_qbsum")

[node name="DialogueText" type="Label" parent="DialogueZone/VBoxContainer"]
custom_minimum_size = Vector2(1100, 22)
layout_mode = 2
size_flags_stretch_ratio = 0.0
label_settings = SubResource("LabelSettings_qi7xk")
autowrap_mode = 2
justification_flags = 35

[node name="InputIndicator" parent="DialogueZone" instance=ExtResource("3_xi5iw")]
layout_mode = 1
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0

[node name="BipSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1h2o0")
script = ExtResource("6_o4i36")
